--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   ],
   "license": "ISC",
   "author": "Ravi Tiwari",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js" 
   }
 }
