--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.14.0",
     "prettier": "^3.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
